--- a/NT114-t2-be/appsettings.json
+++ b/NT114-t2-be/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "TokenKey": "This is the token key, hehehehehehehehe"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
