successfully upload and retrieve image

--- a/NT114-t2-be/appsettings.json
+++ b/NT114-t2-be/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "TokenKey": "This is the token key, hehehehehehehehe"
+    "TokenKey": "key, hehehehehehehehehehehehe"
   },
   "Logging": {
     "LogLevel": {
